--- a/assets/css/wave-bsb.css
+++ b/assets/css/wave-bsb.css
@@ -79,11 +79,10 @@
   --bs-accent-border-subtle: #da9999;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  --bs-font-sans-serif: font-family: "amiri", sans-serif;
+
+  --bs-font-monospace: font-family: "amiri", sans-serif;
+ 
   --bs-gradient: linear-gradient(
     180deg,
     hsla(0, 0%, 100%, 0.15),
@@ -126,7 +125,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-xxl: 2rem;
   --bs-border-radius-2xl: var(--bs-border-radius-xxl);
-  --bs-border-radius-pill: 50rem;
+  --bs-border-radius-pill: 0.8rem;
   --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
@@ -250,6 +249,9 @@ h6 {
 .h1,
 h1 {
   font-size: calc(1.375rem + 1.5vw);
+  font-family: "amiri", sans-serif;
+font-weight: 700;
+font-style: normal;
 }
 @media (min-width: 1200px) {
   .h1,
@@ -595,11 +597,18 @@ progress {
   font-size: calc(1.525rem + 3.3vw);
   font-weight: 300;
   line-height: 1.2;
-  color: var(--bs-black);
+  color: black;
+  letter-spacing: 0.2rem;
 }
+.fw-normal{
+  color: white;
+  font-weight: 400 !important;
+}
+
+
 @media (min-width: 1200px) {
   .display-3 {
-    font-size: 4rem;
+    font-size: 3.1rem;
   }
 }
 .display-4 {
@@ -910,10 +919,7 @@ progress {
 .gx-3 {
   --bs-gutter-x: 1rem;
 }
-.g-3,
-.gy-3 {
-  --bs-gutter-y: 1rem;
-}
+
 .g-4,
 .gx-4 {
   --bs-gutter-x: 1.5rem;
@@ -3095,6 +3101,8 @@ textarea.form-control.is-invalid {
   user-select: none;
   vertical-align: middle;
 }
+
+
 @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
@@ -3152,23 +3160,23 @@ fieldset:disabled .btn {
   --bs-btn-color: #fff;
   --bs-btn-bg: #ECD087;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #283687;
-  --bs-btn-hover-border-color: #26327f;
+  --bs-btn-hover-bg: #b6bcda91;
+ 
   --bs-btn-focus-shadow-rgb: 78, 92, 173;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #26327f;
+  --bs-btn-active-bg: #a1a7cf;
   --bs-btn-active-border-color: #232f77;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #2f3f9f;
-  --bs-btn-disabled-border-color: #2f3f9f;
+  --bs-btn-disabled-bg: #a8abbe;
+  --bs-btn-disabled-border-color: #8b90b1;
 }
 .btn-secondary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #6c757d;
   --bs-btn-border-color: #6c757d;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #5c636a;
+  --bs-btn-hover-bg: #b6bcda91;
   --bs-btn-hover-border-color: #565e64;
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
   --bs-btn-active-color: #fff;
@@ -3213,10 +3221,10 @@ fieldset:disabled .btn {
 }
 .btn-warning {
   --bs-btn-color: #000;
-  --bs-btn-bg: #ffc107;
-  --bs-btn-border-color: #ffc107;
+  --bs-btn-bg: #ffc10798;
+  --bs-btn-border-color: #ffc1079c;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ffca2c;
+  --bs-btn-hover-bg: #ffca2c64;
   --bs-btn-hover-border-color: #ffc720;
   --bs-btn-focus-shadow-rgb: 217, 164, 6;
   --bs-btn-active-color: #000;
@@ -3227,22 +3235,7 @@ fieldset:disabled .btn {
   --bs-btn-disabled-bg: #ffc107;
   --bs-btn-disabled-border-color: #ffc107;
 }
-.btn-danger {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #dc3545;
-  --bs-btn-border-color: #dc3545;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #bb2d3b;
-  --bs-btn-hover-border-color: #b02a37;
-  --bs-btn-focus-shadow-rgb: 225, 83, 97;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #b02a37;
-  --bs-btn-active-border-color: #a52834;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #dc3545;
-  --bs-btn-disabled-border-color: #dc3545;
-}
+
 .btn-light {
   --bs-btn-color: #000;
   --bs-btn-bg: #f8f9fa;
@@ -3292,17 +3285,17 @@ fieldset:disabled .btn {
   --bs-btn-disabled-border-color: #a30000;
 }
 .btn-outline-primary {
-  --bs-btn-color: #2f3f9f;
-  --bs-btn-border-color: #2f3f9f;
+  --bs-btn-color: #ffffff;
+  --bs-btn-border-color: #B0AFAE;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #2f3f9f;
+  --bs-btn-hover-bg: #b0afae6d;
   --bs-btn-hover-border-color: #2f3f9f;
   --bs-btn-focus-shadow-rgb: 47, 63, 159;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #2f3f9f;
+  --bs-btn-active-bg: #b6bcda91;
   --bs-btn-active-border-color: #2f3f9f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #2f3f9f;
+  --bs-btn-disabled-color: #b6bcda91;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #2f3f9f;
   --bs-gradient: none;
@@ -4051,7 +4044,7 @@ fieldset:disabled .btn {
   --bs-navbar-active-color: rgba(255, 255, 255, 0.9);
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
-  --bs-navbar-brand-font-size: 1.25rem;
+  --bs-navbar-brand-font-size: 1rem;
   --bs-navbar-brand-color: rgb(255, 255, 255);
   --bs-navbar-brand-hover-color: rgb(255, 255, 255);
   --bs-navbar-nav-link-padding-x: 0.5rem;
@@ -8720,7 +8713,7 @@ fieldset:disabled .btn {
   font-size: calc(1.3rem + 0.6vw) !important;
 }
 .fs-4 {
-  font-size: calc(1.275rem + 0.3vw) !important;
+  font-size: calc(0.700rem + 0.3vw) !important;
 }
 .fs-5 {
   font-size: 1.25rem !important;
@@ -12451,7 +12444,7 @@ fieldset:disabled .btn {
   }
   .py-xl-8 {
     padding-bottom: 4.5rem !important;
-    padding-top: 4.5rem !important;
+  
   }
   .py-xl-9 {
     padding-bottom: 5rem !important;
@@ -13543,7 +13536,7 @@ fieldset:disabled .btn {
     font-size: 1.75rem !important;
   }
   .fs-4 {
-    font-size: 1.5rem !important;
+    font-size: 1.0rem !important;
   }
 }
 @media print {
@@ -13744,9 +13737,9 @@ fieldset:disabled .btn {
   z-index: -1;
 }
 .bsb-btn-xl {
-  --bs-btn-padding-y: 0.500rem;
+  --bs-btn-padding-y: 0.800rem;
   --bs-btn-padding-x: 1.0rem;
-  --bs-btn-font-size: calc(1.26rem + 0.12vw);
+  --bs-btn-font-size: calc(0.800rem + 0.12vw);
   --bs-btn-border-radius: var(--bs-border-radius-sm);
 }
 @media (min-width: 1200px) {
@@ -13756,7 +13749,7 @@ fieldset:disabled .btn {
 }
 .bsb-btn-2xl {
   --bs-btn-padding-y: 0.500rem;
-  --bs-btn-padding-x: 1.5rem;
+  --bs-btn-padding-x: 1.2rem;
   --bs-btn-font-size: calc(1.27rem + 0.24vw);
   --bs-btn-border-radius: var(--bs-border-radius-lg);
 }
@@ -13766,19 +13759,20 @@ fieldset:disabled .btn {
   }
 }
 .bsb-btn-3xl {
-  --bs-btn-padding-y: 0.875rem;
-  --bs-btn-padding-x: 1.75rem;
+
+  --bs-btn-padding-x: 1rem;
   --bs-btn-font-size: calc(1.28rem + 0.36vw);
   --bs-btn-border-radius: var(--bs-border-radius-lg);
 }
 @media (min-width: 1200px) {
   .bsb-btn-3xl {
+    color: #fff;
     --bs-btn-font-size: 1.55rem;
   }
 }
 .bsb-btn-4xl {
   --bs-btn-padding-y: 1rem;
-  --bs-btn-padding-x: 2rem;
+  --bs-btn-padding-x: 1.5rem;
   --bs-btn-font-size: calc(1.29rem + 0.48vw);
   --bs-btn-border-radius: var(--bs-border-radius-lg);
 }
@@ -14667,7 +14661,7 @@ fieldset:disabled .btn {
   background: #fafafa;
 }
 .backgroundcolor {
-  background: #7B8055;
+  
   font-family: 'Amiri';
   color: #fff;
 }
@@ -14767,7 +14761,7 @@ fieldset:disabled .btn {
   transition: all 0.5s;
 }
 .bsb-navbar .nav-link {
-  --bs-nav-link-font-weight: 700;
+  --bs-nav-link-font-weight: 500;
 }
 @media (min-width: 1400px) {
   .bsb-section-py-xxl-1 {
